syntax = "proto3";
package token;

option go_package = "github.com/nickbryan/collectable/services/iam/token";

message CreateTokenRequest {
  string email = 1;
  string password = 2;
}

message CreateTokenResponse {
  string token = 1;
}

service TokenService {
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse) {}
}